erDiagram
    %% ============================================
    %% BENCHSIGHT ENTITY RELATIONSHIP DIAGRAM
    %% 62 Tables (34 Dimension + 26 Fact + 2 QA)
    %% Generated: January 7, 2026
    %% Version: 13.18
    %% ============================================

    %% ==================== CORE DIMENSION TABLES ====================

    dim_player {
        string player_id PK
        string player_first_name
        string player_last_name
        string player_full_name
        int current_skill_rating
    }

    dim_team {
        string team_id PK
        string team_name
        string team_code
    }

    dim_schedule {
        int game_id PK
        string home_team FK
        string away_team FK
        date game_date
        string season_id FK
    }

    dim_season {
        string season_id PK
        string season_name
        date start_date
        date end_date
    }

    dim_period {
        string period_id PK
        int period_number
        string period_name
        string period_type
    }

    dim_position {
        string position_id PK
        string position_code
        string position_name
        string position_type
    }

    dim_event_type {
        string event_type_id PK
        string event_type_code
        string event_type_name
    }

    dim_event_detail {
        string event_detail_id PK
        string event_detail_code
        string event_detail_name
    }

    dim_zone {
        string zone_id PK
        string zone_code
        string zone_name
    }

    dim_shift_duration {
        string shift_duration_id PK
        string duration_bucket
        int min_seconds
        int max_seconds
    }

    %% ==================== CORE FACT TABLES ====================

    fact_events {
        string event_id PK
        int game_id FK
        string period_id FK
        string event_type FK
        string event_detail FK
        int is_goal
        string team FK
        int period_time_seconds
    }

    fact_event_players {
        string event_player_key PK
        string event_id FK
        string player_id FK
        string player_role
        int jersey_number
    }

    fact_shifts {
        string shift_id PK
        int game_id FK
        string period_id FK
        int shift_duration
        string shift_duration_id FK
    }

    fact_shift_players {
        string shift_player_key PK
        string shift_id FK
        string player_id FK
        string team
    }

    fact_gameroster {
        string roster_key PK
        int game_id FK
        string player_id FK
        string team
        int jersey_number
        string position FK
    }

    %% ==================== DERIVED FACT TABLES ====================

    fact_faceoffs {
        string faceoff_id PK
        string event_id FK
        int game_id FK
        string winner_player_id FK
        string loser_player_id FK
    }

    fact_rushes {
        string rush_id PK
        string event_id FK
        int game_id FK
        string rush_type
    }

    fact_zone_entries {
        string zone_entry_id PK
        string event_id FK
        int game_id FK
        string entry_type
    }

    fact_zone_exits {
        string zone_exit_id PK
        string event_id FK
        int game_id FK
        string exit_type
    }

    fact_saves {
        string save_id PK
        string event_id FK
        int game_id FK
        string goalie_id FK
    }

    fact_penalties {
        string penalty_id PK
        string event_id FK
        int game_id FK
        string player_id FK
        int penalty_minutes
    }

    %% ==================== RELATIONSHIPS ====================

    dim_player ||--o{ fact_event_players : "player_id"
    dim_player ||--o{ fact_gameroster : "player_id"
    dim_player ||--o{ fact_shift_players : "player_id"
    dim_team ||--o{ dim_schedule : "home_team/away_team"
    dim_season ||--o{ dim_schedule : "season_id"
    dim_schedule ||--o{ fact_events : "game_id"
    dim_schedule ||--o{ fact_shifts : "game_id"
    dim_schedule ||--o{ fact_gameroster : "game_id"
    dim_period ||--o{ fact_events : "period_id"
    dim_period ||--o{ fact_shifts : "period_id"
    dim_event_type ||--o{ fact_events : "event_type"
    dim_event_detail ||--o{ fact_events : "event_detail"
    dim_position ||--o{ fact_gameroster : "position"
    dim_shift_duration ||--o{ fact_shifts : "shift_duration_id"
    fact_events ||--o{ fact_event_players : "event_id"
    fact_events ||--o{ fact_faceoffs : "event_id"
    fact_events ||--o{ fact_rushes : "event_id"
    fact_events ||--o{ fact_zone_entries : "event_id"
    fact_events ||--o{ fact_zone_exits : "event_id"
    fact_events ||--o{ fact_saves : "event_id"
    fact_events ||--o{ fact_penalties : "event_id"
    fact_shifts ||--o{ fact_shift_players : "shift_id"
